# Darmoshark-M3-Linux

./: 99-darmoshark.rules  CMakeLists.txt  M3.pcapng  PKGBUILD  build_log.txt  com.darmoshark.m3.desktop  com.darmoshark.m3.yaml  config.toml  novo_arquivo.txt  resources.qrc
Darmoshark M3/: 2.4Ghz.pcapng  About.pcapng
Darmoshark M3/2.4Ghz/: readme.txt
Darmoshark M3/2.4Ghz/DPI/: DPI.pcapng  readme.txt
Darmoshark M3/2.4Ghz/Descarregando/: readme.txt
Darmoshark M3/2.4Ghz/E-Sports Mode/close/: close.pcapng  readme.txt
Darmoshark M3/2.4Ghz/E-Sports Mode/open/: open.pcapng  readme.txt
Darmoshark M3/2.4Ghz/Lift Off Distance/: readme.txt
Darmoshark M3/2.4Ghz/Lift Off Distance/High/: high.pcapng  readme.txt
Darmoshark M3/2.4Ghz/Lift Off Distance/Low/: low.pcapng
Darmoshark M3/2.4Ghz/Report Rate/: 1000Hz.pcapng  125Hz.pcapng  500Hz.pcapng
Darmoshark M3/2.4Ghz/Scroll Direction Setting/forward/: forward.pcapng
Darmoshark M3/2.4Ghz/Scroll Direction Setting/reverse/: reverse.pcapng
Darmoshark M3/2.4Ghz/Sensor Performance/Angle Snap/: Angle Desligado.pcapng  Angle Ligado.pcapng
Darmoshark M3/2.4Ghz/Sensor Performance/Motion Sync/: Motion Sync Desligado.pcapng  Motion Sync Ligado.pcapng  readme.txt
Darmoshark M3/2.4Ghz/Sensor Performance/Ripple/: Ripple Desligado.pcapng  Ripple Ligado.pcapng  readme.txt
Darmoshark M3/CABO USB/: readme.txt
Darmoshark M3/CABO USB/DPI/: DPI.pcapng
Darmoshark M3/CABO USB/E-Sports Mode/: readme.txt
Darmoshark M3/CABO USB/E-Sports Mode/close/: close.pcapng
Darmoshark M3/CABO USB/E-Sports Mode/open/: open.pcapng
Darmoshark M3/CABO USB/Lift Off Distance/High/: high.pcapng
Darmoshark M3/CABO USB/Lift Off Distance/Low/: low.pcapng  readme.txt
Darmoshark M3/CABO USB/Report Rate/: 1000Hz.pcapng  125Hz.pcapng  500Hz.pcapng  readme.txt
Darmoshark M3/CABO USB/Scroll Direction Setting/: readme.txt
Darmoshark M3/CABO USB/Scroll Direction Setting/forward/: Forward.pcapng  USB-reverse-to-forward.pcapng  readme.txt
Darmoshark M3/CABO USB/Scroll Direction Setting/reverse/: USB-forward-to-reverse.pcapng  readme.txt  reverse.pcapng
Darmoshark M3/CABO USB/Sensor Performance/: readme.txt
Darmoshark M3/CABO USB/Sensor Performance/Angle Snap/: Angle Snap Desligado.pcapng  Angle Snap Ligadp.pcapng  readme.txt
Darmoshark M3/CABO USB/Sensor Performance/Motion Sync/: Motion Sync Desligado.pcapng  Motion Sync Ligado.pcapng
Darmoshark M3/CABO USB/Sensor Performance/Ripple/: Ripple Desligado.pcapng  Ripple Ligado.pcapng
Darmoshark M3/Firmware/Firmware 2.0.9r - RF Version e.1.0r-7/: dongle.jfw  mouse.jfw
Stitch/: guia_de_refer_ncia_de_design.html
Stitch/obsidian_glide/: DESIGN.md
include/toml++/: toml.hpp
pkg/darmoshark-m3/: .BUILDINFO  .MTREE  .PKGINFO
qml/: AboutView.qml  DPIView.qml  ESportsModeView.qml  HomeView.qml  LiftOffDistanceView.qml  Main.qml  ReportRateView.qml  ScrollDirectionView.qml  SensorPerformanceView.qml  SettingsView.qml
qml/components/: BatteryStatusBadge.qml  ConnectionStatusBadge.qml  NavigationDock.qml  PageViewport.qml  SettingsSwitch.qml  ThemeBackgroundTransition.qml
qml/idiomas/: I18n.js
qml/modals/: ConfigFileModal.qml
src/: appcontroller.cpp  appcontroller.h  configmanager.cpp  configmanager.h  hidmanager.cpp  hidmanager.h  main.cpp  mouseprotocol.h
